enabled RuleAnnotationProcessor
Signed-off-by: Maximilian Inckmann <maximilian.inckmann@kit.edu>