@@ -43,6 +43,8 @@ java {
 }
 
 configurations {
+//    annotationProcessorPath
+
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -70,6 +72,9 @@ dependencies {
     /* Spring BOM – drives every spring-boot starter below */
     implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
 
+    /* Rules API */
+    implementation project(':rules-api')
+
     /* Spring Boot starters (version comes from the BOM) */
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-data-neo4j"
@@ -96,9 +101,11 @@ dependencies {
     compileOnly "org.projectlombok:lombok:1.18.38"
     annotationProcessor "org.projectlombok:lombok:1.18.38"
 
-    // Google AutoService for META-INF/services generation for your processor
-    implementation 'com.google.auto.service:auto-service-annotations:1.1.1'
-    annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
+    /* JavaX Annotations */
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+    // Add the processor module
+    annotationProcessor project(':rules-processor')
 
     /* Error-prone */
     errorprone "com.google.errorprone:error_prone_core:${errorproneVersion}"
@@ -116,10 +123,19 @@ tasks.withType(JavaCompile).configureEach {
     if (name.toLowerCase().contains('test')) {
         options.errorprone.enabled = false
     }
+
     options.compilerArgs += [
             '-Xlint:unchecked',
             '-Xlint:deprecation',
             '-Xmaxwarns', '200'
+    ]
+
+    // Enable annotation processing explicitly
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+            '-verbose',
+//            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
     ]
 
     options.errorprone {
